--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "bfreeman",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,6 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.6.4"
+    "@astrojs/tailwind": "^3.1.3",
+    "astro": "^2.5.0",
+    "tailwindcss": "^3.0.24"
   }
 }
