--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.3",
+    "@fontsource-variable/inter": "^5.0.3",
     "astro": "^2.5.0",
+    "astro-icon": "^0.8.1",
     "tailwindcss": "^3.0.24"
   }
 }
