--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "astro": "^2.5.0",
     "astro-icon": "^0.8.1",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-astro": "^0.10.0",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
