--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "wrangler deploy"
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.3",
@@ -22,6 +23,8 @@
     "eslint": "^8.42.0",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.10.0",
-    "prettier-plugin-tailwindcss": "^0.3.0"
-  }
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "wrangler": "^4.20.2"
+  },
+  "packageManager": "pnpm@10.11.1"
 }
